--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,14 +21,8 @@
   </div>
   <div class="col-md-4 dashboard-extra-stat">
     <div class="card-block statistic">
-      <h3><%= @all_webhooks %></h3>
-      <span class="text-muted">Apps <small class="badge badge-light float-right"><%= @all_webhooks_total %></small></span>
-    </div>
-  </div>
-  <div class="col-md-4 dashboard-extra-stat">
-    <div class="card-block statistic">
-      <h3><%= @all_tags %></h3>
-      <span class="text-muted">Tags <small class="badge badge-light float-right"><%= @all_tags_total %></small></span>
+      <h3><%= @all_apps %></h3>
+      <span class="text-muted">Apps <small class="badge badge-light float-right"><%= @all_apps_total %></small></span>
     </div>
   </div>
 </div>
