--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,9 +1,9 @@
-<h2 class="headline-title"><%= image_tag("apps/#{@webhook.name}.png", style: 'width: 30px;margin-top: -5px;margin-right: 5px') %> <%= appSingle(@webhook.name)['displayName'] %></h2>
+<h2 class="headline-title"><%= image_tag("apps/#{@app.name}.png", style: 'width: 30px;margin-top: -5px;margin-right: 5px') %> <%= appSingle(@app.name)['displayName'] %></h2>
 
-<div class="webhook-options clearfix">
-  <a href="/webhooks/<%= @webhook.slug %>/edit" class="btn btn-outline-light float-right"><i class="fas fa-edit mr-0"></i></a>
-  <a href="/export?id=<%= @webhook.id %>" download class="btn btn-outline-light mr-2 float-right"><i class="fas fa-download"></i> CSV</a>
-  <select id="activity-date-picker" data-url="<%= request.base_url %>/database/<%= @webhook.slug %>" class="form-control float-right mr-2">
+<div class="app-options clearfix">
+  <a href="/apps/<%= @app.slug %>/edit" class="btn btn-outline-light float-right"><i class="fas fa-edit mr-0"></i></a>
+  <a href="/export?id=<%= @app.id %>" download class="btn btn-outline-light mr-2 float-right"><i class="fas fa-download"></i> CSV</a>
+  <select id="activity-date-picker" data-url="<%= request.base_url %>/database/<%= @app.slug %>" class="form-control float-right mr-2">
     <option value="?timeframe=7-days">Last 7 Days</option>
     <option value="?timeframe=30-days" selected>Last Month</option>
     <option value="?timeframe=90-days">Last 3 Months</option>
@@ -20,7 +20,7 @@
 
 
 <div id="search-table" class="float-right">
-  <input type="search" autocomplete="off" class="form-control form-control-sm" id="search" placeholder="Search <%= @webhook.name %>..." data-type="<%= @webhook.slug %>" />
+  <input type="search" autocomplete="off" class="form-control form-control-sm" id="search" placeholder="Search <%= @app.name %>..." data-type="<%= @app.slug %>" />
 </div>
 
 <%= render 'shared/table_controls' %>
