--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="headline-title">Dashboard</h2>
+<h2 class="headline-title float-left">Dashboard</h2>
 
 <div class="webhook-options dashboard clearfix">
   <select id="activity-date-picker" data-url="<%= request.base_url %>" class="form-control float-right">
