--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Settings</h2>
+<h2 class="headline-title">Settings</h2>
 <hr>
 <div class="card-block has-footer">
   <%= form_with(model: @settings, local: true, html: {autocomplete: 'off'}) do |form| %>
