--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -1,4 +1,4 @@
-<h2>New Campaign</h2>
+<h2 class="headline-title">New Campaign</h2>
 <hr>
 <div class="card-block has-footer">
   <%= render 'form', campaign: @campaign %>
