--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -1,6 +1,6 @@
-<h2 class="headline-title"><%= image_tag("apps/#{@app.name}.png", style: 'width: 30px;margin-top: -5px;margin-right: 5px') %> <%= appSingle(@app.name)['displayName'] %></h2>
+<h2 class="headline-title float-left"><%= image_tag("apps/#{@app.name}.png", style: 'width: 30px;margin-top: -5px;margin-right: 5px') %> <%= appSingle(@app.name)['displayName'] %></h2>
 
-<div class="app-options clearfix">
+<div class="webhook-options clearfix">
   <a href="/apps/<%= @app.slug %>/edit" class="btn btn-outline-light float-right"><i class="fas fa-edit mr-0"></i></a>
   <a href="/export?id=<%= @app.id %>" download class="btn btn-outline-light mr-2 float-right"><i class="fas fa-download"></i> CSV</a>
   <select id="activity-date-picker" data-url="<%= request.base_url %>/database/<%= @app.slug %>" class="form-control float-right mr-2">
