--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <%= link_to 'New User', '/users/new', class: 'btn btn-warning float-right' %>
-<h2>Users</h2>
+<h2 class="headline-title">Users</h2>
 <hr>
 
 <%= will_paginate @users, class: 'table_pagination mt-3 mb-3' %>
