--- a/app/views/apps/edit.html.erb
+++ b/app/views/apps/edit.html.erb
@@ -1,4 +1,4 @@
-<h2 class="headline-title">Edit App</h2>
+<h2 class="headline-title float-left">Edit App</h2>
 <div class="webhook-options delete-option clearfix">
   <%= link_to 'Delete w/ all Requests', @app, method: :delete, data: { confirm: 'Are you sure this will also delete all associated requests records?' }, class: 'btn btn-outline-secondary float-right' %>
 </div>
