--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -37,7 +37,7 @@
               <a href="https://zapier.com/zapbook/create/<%= appSingle(app.name)['displayName'] %>/WebHookAPI" target="_blank" class="btn btn-sm btn-zapier btn-block">Connect</a>
             <% end %>
           </td>
-          <td><a href="/apps/<%= app.slug %>/edit" class="btn btn-outline-light btn-sm btn-block"><i class="fas fa-edit mr-0"></i></a></td>
+          <td class="text-right pr-3"><a href="#" class="text-muted" style="font-size: 1.3em;opacity: 0.6"><i class="fas fa-ellipsis-v"></i></a></td>
         </tr>
       <% end %>
     </tbody>
