buttons should be icons when possible

--- a/app/views/shared/_table_controls.html.erb
+++ b/app/views/shared/_table_controls.html.erb
@@ -1,7 +1,7 @@
 <div class="mb-3">
-  <button class="btn btn-sm btn-outline-light" id="table-selectAll">Select All</button>
-  <button class="btn btn-sm btn-outline-light" id="table-deselectAll">De-select All</button>
-  <button class="btn btn-sm btn-outline-light" id="table-deleteSelected">Delete</button>
+  <button class="btn btn-sm btn-outline-light" id="table-selectAll"><i class="fas fa-check-circle mr-0"></i></button>
+  <button class="btn btn-sm btn-outline-light" id="table-deselectAll"><i class="far fa-check-circle mr-0"></i></button>
+  <button class="btn btn-sm btn-outline-light" id="table-deleteSelected"><i class="fas fa-trash-alt mr-0"></i></button>
   <select id="table-show-amount" class="form-control form-control-sm mr-3" style="width: 150px;display:inline-block">
     <option value="?per_page=25">Show 25 Per Page</option>
     <option value="?per_page=50">Show 50 Per Page</option>
