--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="webhook-options clearfix">
   <a href="/apps/<%= @app.slug %>/edit" class="btn btn-outline-light float-right"><i class="fas fa-edit mr-0"></i></a>
-  <a href="/export?id=<%= @app.id %>" download class="btn btn-outline-light mr-2 float-right"><i class="fas fa-download"></i> CSV</a>
+  <a href="/export?id=<%= @app.id %>" download class="btn btn-outline-light mr-2 float-right"><i class="fas fa-download mr-0"></i></a>
   <select id="activity-date-picker" data-url="<%= request.base_url %>/database/<%= @app.slug %>" class="form-control float-right mr-2">
     <option value="?timeframe=7-days">Last 7 Days</option>
     <option value="?timeframe=30-days" selected>Last Month</option>
