--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,16 @@ a {
   font-weight: 700;
 }
 
+.dotted-menu {
+  font-size: 1.3em;
+  opacity: 0.6;
+  padding: 5px;
+  padding-top: 10px;
+  padding-right: 12px;
+  display: block;
+  float: right;
+}
+
 .form-control:focus, .custom-select:focus {
   border-color: rgba(210, 214, 221, 1.000);
   box-shadow: none;
@@ -127,7 +137,6 @@ form label {
   padding: 15px;
   border-radius: 4px;
   position: relative;
-  overflow: hidden;
 }
 
 .card-block.chartjs {
