--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -25,8 +25,17 @@
         <span class="text-muted">Rows</span>
         <p>0</p>
       </div>
-      <div class="col-md-1 text-right" style="padding-top: 10px;padding-right: 20px;">
-        <a href="#" class="text-muted" style="font-size: 1.3em;opacity: 0.6"><i class="fas fa-ellipsis-v"></i></a>
+      <div class="col-md-1 text-right">
+        <div class="dropdown dropleft">
+          <a href="#" role="button" class="dotted-menu" id="campaign-edit-list-<%= campaign.slug %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-ellipsis-v"></i>
+          </a>
+          <div class="dropdown-menu" aria-labelledby="campaign-edit-list-<%= campaign.slug %>">
+            <a class="dropdown-item text-muted" href="/campaigns/<%= campaign.slug %>"><i class="far fa-eye mr-1"></i> View</a>
+            <a class="dropdown-item text-muted" href="/campaigns/<%= campaign.slug %>/edit"><i class="far fa-edit mr-1"></i> Edit</a>
+            <%= link_to raw('<i class="far fa-trash-alt mr-1"></i> Delete'), campaign, method: :delete, data: { confirm: 'Are you sure this will also delete all associated apps and records?' }, class: 'dropdown-item text-muted' %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
