--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
           }],
           select: {
             style: 'multi',
-            selector: 'td'
+            selector: 'td:first-child'
           },
           order: [[ 1, 'asc' ]],
           dom: 'Bfrtip',
