use es6 modules for javascript

--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -25,7 +25,7 @@
 
 <%= render 'shared/table_controls' %>
 
-<div class="searching-for text-muted mb-3 badge badge-secondary">
+<div class="searching-for text-muted mb-3">
   Searching for "<strong>Search Term</strong>" with <span><%= @search_count %></span> result(s).
 </div>
 
