--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -124,12 +124,22 @@ form label {
   color: #607aa0;
 }
 
+.app-image-headline {
+  border-radius: 6px;
+  box-shadow: 0 0 3px #d2d6de;
+  background: #fff;
+  border: 3px solid #fff;
+  width: 38px;
+  margin-top: -5px;
+  margin-right: 5px
+}
+
 .click-to-copy {
   width: 100%;
   border: none;
   border-radius: 4px;
   font-size: 1em;
-  background: #fff;
+  background: none;
   font-weight: 400;
   color: #607aa0
 }
