--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <div class="col-md-12">
+    <!-- <div class="col-md-12">
       <div class="card-block mb-3">
         <label>Table Columns</label>
         <div id="table-column-list" class="mb-3"></div>
@@ -50,7 +50,7 @@
     <div style="display: none">
       <%= form.text_field :structure, id: 'final-structure' %>
       <%= form.text_field :column_keys, id: 'final-column-keys' %>
-    </div>
+    </div> -->
   </div>
 
   <div class="card-block-footer clearfix">
